--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,15 +1,19 @@
 # Number of days of inactivity before an issue becomes stale
-daysUntilStale: 60
+daysUntilStale: 90
 
 # Number of days of inactivity before a stale issue is closed
-daysUntilClose: 7
+daysUntilClose: 10
 
 # Issues with these labels will never be considered stale
 exemptLabels:
+  - backlog
+  - bug
   - emergency
   - high priority
   - priority
+  - project
   - security
+  - technical-debt
 
 # Label to use when marking an issue as stale
 staleLabel: stale
