--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -2,7 +2,7 @@
 daysUntilStale: 90
 
 # Number of days of inactivity before a stale issue is closed
-daysUntilClose: 10
+daysUntilClose: false
 
 # Issues with these labels will never be considered stale
 exemptLabels:
