--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -20,11 +20,8 @@ staleLabel: stale
 
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
-  This issue has been automatically marked as stale because it has not had
-  recent activity. We want to keep it in our todo list but haven't had the time
-  to address it yet.
-  
-  Thank you for your contributions!
+  This issue has been automatically marked as stale because it has not had recent activity.
+  We haven't had the time to address it yet, but **we want to keep it open**. This message is just a reminder for us to help triage issues.
 
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: false
