--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Slack Channel
-    url: http://slack.opencollective.com/
+  - name: Discord Channel
+    url: http://discord.opencollective.com
     about: Engage with the Open Collective community
   - name: Documentation
     url: https://docs.opencollective.com/help/
